--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <section id="main_content">
         <h1 id="shadowizard">Shadowizard</h1>
 <p>Shadowizard is a simple, customizable, and lightweight package that allows you to add beautiful and customizable box-shadow effects to your HTML elements. It’s easy to use and can be installed via the Node Package Manager (NPM).</p>
-
+<p><code class="language-plaintext highlighter-rouge">.shadowizard</code> Add this class to the target tag so thatshadowizardcan work</p>
 <h1 id="installation">Installation</h1>
 <p>We can using:
 • NPM
