--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 
 <!-- Setup Google Analytics -->
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4827290440879397"
+     crossorigin="anonymous"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
