--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <!-- end theme color meta headers -->
 
+<!-- Google Tag Manager -->
 
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+
+})(window,document,'script','dataLayer','GTM-PR7QPR4');</script>
+
+<!-- End Google Tag Manager -->
 <!-- Setup Google Analytics -->
     <!-- Meta Pixel Code -->
 
@@ -106,7 +118,13 @@ src="https://www.facebook.com/tr?id=1373951763403875&ev=PageView&noscript=1"
         </section>
       </div>
     </header>
+<!-- Google Tag Manager (noscript) -->
 
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PR7QPR4"
+
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
+<!-- End Google Tag Manager (noscript) -->
     <div class="container">
       <section id="main_content">
         <h1 id="shadowizard">Shadowizard</h1>
