--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ shadowizard({
 <h1 id="conclusion">Conclusion</h1>
 
 <p>Shadowizard is a simple and customizable package that makes it easy to add beautiful box-shadow effects to your HTML elements. With its easy-to-use API and customizable options, you can quickly and easily create stunning visual effects that enhance the design of your website or application.</p>
-
+<a href="example.html">See an example </a>
 <h1 id="tags">Tags</h1>
 
 <p><img src="https://img.shields.io/github/downloads/developerso/shadowizard/total?color=green" alt="" />
